# GAMES101_CODE_FRAMEWORK

./: CMakeLists.txt  CMakeSettings.json
3party/: CMakeLists.txt
3party/freetype-2.12.0/: CMakeLists.txt
work_00/: CMakeLists.txt  main.cpp
work_02/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.cpp
work_03/: CMakeLists.txt  main.cpp  rasterizer.cpp
work_04/: CMakeLists.txt  main.cpp
work_05/: CMakeLists.txt  Renderer.cpp  Triangle.hpp
work_06/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Triangle.hpp
work_07/: BVH.cpp  CMakeLists.txt  Scene.cpp  Vector.hpp
work_08/: CMakeLists.txt
work_08/CGL/: CMakeLists.txt
work_08/CGL/include/CGL/: CGL.h  misc.h  quaternion.h
work_08/CGL/src/: CGL.h  CMakeLists.txt  quaternion.h
work_08/CGL/tests/: CMakeLists.txt  osd.cpp
work_08/src/: CMakeLists.txt  main.cpp
